feat(calibracion): integrar habilidades activas del evaluador y puntajes dinamicos en ejecutor llm